# rlgame-rs

./: .gitignore  Cargo.toml  README.md  build.sh
raws/: spawns.json
src/: animal_ai_system.rs  bystander_ai_system.rs  camera.rs  components.rs  damage_system.rs  encumbrance_system.rs  gamelog.rs  gamesystem.rs  gui.rs  hunger_system.rs  inventory_system.rs  lighting_system.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  movement_system.rs  particle_system.rs  player.rs  random_table.rs  ranged_combat_system.rs  rect.rs  rex_assets.rs  saveload_system.rs  spawner.rs  trigger_system.rs  visibility_system.rs
src/ai/: adjacent_ai_system.rs  animal_ai_system.rs  approach_ai_system.rs  bystander_ai_system.rs  chase_ai_system.rs  default_move_ai.rs  flee_ai_system.rs  initiative_system.rs  mod.rs  monster_ai_system.rs  quip_system.rs  turn_status_system.rs  visible_ai_system.rs
src/effects/: damage.rs  hunger.rs  mod.rs  movement.rs  particles.rs  targetting.rs  triggers.rs
src/gamelog/: builder.rs  events.rs  logstore.rs  mod.rs
src/gui/: hud.rs  item_render.rs  mod.rs  tooltips.rs
src/inventory_system/: collection_system.rs  drop_system.rs  identification_system.rs  mod.rs  remove_system.rs  use_equip.rs  use_system.rs
src/map/: camera.rs  dungeon.rs  mod.rs  themes.rs  tiletype.rs
src/map_builders/: area_ending_point.rs  area_starting_points.rs  bsp_dungeon.rs  bsp_interior.rs  cellular_automata.rs  common.rs  cull_unreachable.rs  distant_exit.rs  dla.rs  door_placement.rs  drunkard.rs  forest.rs  (+23 more)
wasm/: index.html
(+25 files in other folders)
