[package]
name = "rougelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rltk = { version = "0.8.0" }
specs = { version = "0.18.0", features = ["serde"] }
rltk = { git = "https://github.com/amethyst/bracket-lib", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
specs-derive = "0.4.1"
